src/objects/ExternalSystemInterface__c.object
<CustomObject>
    <fields>
        <fullName>EstimatedNumberOfRecords__c</fullName>
        <inlineHelpText>The estimated number of records expected each time the interface is executed. This number is multiplied by the frequency to help forecast expected data &amp; API usage.</inlineHelpText>
        <label>Estimated Number of Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExternalSystemInterfaceNotes__c</fullName>
        <label>External System Interface Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExternalSystem__c</fullName>
        <label>External System</label>
        <referenceTo>ExternalSystem__c</referenceTo>
        <relationshipLabel>External System Interfaces</relationshipLabel>
        <relationshipName>ExternalSystemInterfaces</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Real Time</fullName>
                </value>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>On Demand</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MetadataStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Uuid__c</fullName>
        <externalId>true</externalId>
        <label>UUID</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>External System Interface</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Interface Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External System Interfaces</pluralLabel>
    <recordTypes>
        <fullName>Inbound</fullName>
        <active>true</active>
        <label>Inbound</label>
    </recordTypes>
    <recordTypes>
        <fullName>Outbound</fullName>
        <active>true</active>
        <label>Outbound</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>